Add Repository refs. Fix MediaObject schema, make it visible in web (not usable yet)

--- a/wtfamily/templates/citation_detail.html
+++ b/wtfamily/templates/citation_detail.html
@@ -82,6 +82,17 @@
       <dd><a href="{{ url_for('place_detail', obj_id=p.id) }}">{{ p }}</a></dd>
     {% endfor %}
   {% endif %}
+
+  {% if obj.media %}
+    <dt>Файлы</dt>
+    {% for media_obj in obj.media %}
+    <dd>
+      {{ media_obj.description }} ({{ media_obj.date }})
+      {{ media_obj.mime }}
+      {{ media_obj.src }}
+    </dd>
+    {% endfor %}
+  {% endif %}
 </dl>
 
 {% for note in obj.notes %}
