--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -36,6 +36,7 @@
               <li><a href="{{ url_for('event_list') }}">Events</a></li>
               <li><a href="{{ url_for('place_list') }}">Places</a></li>
               <li><a href="{{ url_for('source_list') }}">Sources</a></li>
+              <li><a href="{{ url_for('media_list') }}">Media</a></li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Family Tree<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
