--- a/wtfamily/templates/familytree_primitives.html
+++ b/wtfamily/templates/familytree_primitives.html
@@ -11,7 +11,7 @@
   <link href="{{ url_for('static', filename='css/primitives.latest.css') }}" media="screen" rel="stylesheet" type="text/css" />
 
   <!-- data-main attribute tells require.js to load scripts/main.js after require.js loads. -->
-  <script data-main="/static/js/familytree_via_primitives" src="/static/js/require.js"></script>
+  <script data-main="/static/js/familytree_via_primitives" src="/static/js/lib/require.js"></script>
 {% endblock %}
 
 {% block content %}
