FamilyTree: refactor, add animation on async loading

--- a/wtfamily/static/css/styles.css
+++ b/wtfamily/static/css/styles.css
@@ -41,3 +41,12 @@ div.bp-item-frame div.bp-person-description {
     position: relative;
     padding: .5em 1em;
 }
+
+@keyframes borderPulse {
+      0% { border-color: white; }
+    100% { border-color: black; }
+}
+
+div.bp-item.loading {
+    animation: borderPulse .5s infinite alternate;
+}
