Unify JS dependencies

--- a/wtfamily/static/js/components/sources/sources.mustache
+++ b/wtfamily/static/js/components/sources/sources.mustache
@@ -51,9 +51,7 @@
                   {{else}}
                     {{#notes.value}}
                       <div title="{{id}}">
-                        <blockquote>
-                          <p style="white-space: pre-wrap; font-family: Georgia serif;">{{text}}</p>
-                        </blockquote>
+                        <p style="white-space: pre-wrap;">{{text}}</p>
                         <p>{{#if media}}(has media){{/if}}</p>
                       </div>
                     {{/notes}}
