--- a/wtfamily/templates/restful_app.html
+++ b/wtfamily/templates/restful_app.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
-    <script data-main="/static/js/app" src="/static/js/lib/require.js"></script>
+    <script data-main="/static/js/app" src="/static/js/bower_components/requirejs/require.js"></script>
 </head>
 <body>
     <div id="app"></div>
