Add FamilyTree as a CanJS Component

--- a/wtfamily/static/js/header.mustache
+++ b/wtfamily/static/js/header.mustache
@@ -21,6 +21,9 @@
           <li class="{{#eq page 'events'}}active{{/eq}}">
             <a can-href='{page="events"}'>Events</a>
           </li>
+          <li class="{{#eq page 'familytree'}}active{{/eq}}">
+            <a can-href='{page="familytree"}'>Family Tree</a>
+          </li>
         </ul>  <!--/.nav-->
       </div>  <!--/#navbar.navbar-collapse-->
     </div>  <!--/.container-->
