--- a/wtfamily/static/js/main.mustache
+++ b/wtfamily/static/js/main.mustache
@@ -20,4 +20,8 @@
   {{#eq page "events"}}
     <wtf-events></wtf-events>
   {{/eq}}
+
+  {{#eq page "familytree"}}
+    <wtf-familytree></wtf-familytree>
+  {{/eq}}
 </div>
