--- a/wtfamily/templates/map_migrations.html
+++ b/wtfamily/templates/map_migrations.html
@@ -8,7 +8,7 @@
     <style>
         #map-canvas { width: 1100px; height: 600px; }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization&key=AIzaSyCJkmtBCYVPX9ImKuKdREI35RNDwPjfEQo"></script>
     <script>
 
 var map, pointarray, heatmap;
