--- a/wtfamily/static/css/styles.css
+++ b/wtfamily/static/css/styles.css
@@ -17,10 +17,12 @@ span.icon-female { color: red; }
  * family tree (basic primitives)
  */
 div.bp-item-frame {
+    width: 100%;
+    height: 100%;
     background: white;
-    border: 1px solid grey;
+    border-radius: 3px;
+    box-shadow: 0 0 5px gray;
     font-size: .8em;
-    width: 50px;
 }
 div.bp-item-frame span.bp-person-title {
     display: block;
@@ -42,11 +44,17 @@ div.bp-item-frame div.bp-person-description {
     padding: .5em 1em;
 }
 
-@keyframes borderPulse {
-      0% { border-color: white; }
-    100% { border-color: black; }
+@keyframes backgroundPulse {
+    0% {background-color: #333399;}
+    100% {background-color: #ffcc33;}
 }
 
-div.bp-item.loading {
-    animation: borderPulse .5s infinite alternate;
+@keyframes borderPulse {
+    0% {border-color: white;}
+    100% {border-color: black;}
+}
+
+div.bp-item.loading,
+div.bp-item.loading span {
+    animation: backgroundPulse .5s infinite alternate;
 }
