Add Google Maps as a CanJS component (vanilla + PlaceMap)

--- a/wtfamily/static/js/header.mustache
+++ b/wtfamily/static/js/header.mustache
@@ -24,6 +24,9 @@
           <li class="{{#eq page 'familytree'}}active{{/eq}}">
             <a can-href='{page="familytree"}'>Family Tree</a>
           </li>
+          <li class="{{#eq page 'map'}}active{{/eq}}">
+            <a can-href='{page="map"}'>Map</a>
+          </li>
         </ul>  <!--/.nav-->
       </div>  <!--/#navbar.navbar-collapse-->
     </div>  <!--/.container-->
