--- a/wtfamily/static/js/main.mustache
+++ b/wtfamily/static/js/main.mustache
@@ -24,4 +24,8 @@
   {{#eq page "familytree"}}
     <wtf-familytree></wtf-familytree>
   {{/eq}}
+
+  {{#eq page "map"}}
+    <wtf-map-places></wtf-map-places>
+  {{/eq}}
 </div>
