Apply some pending stuff

--- a/wtfamily/templates/familytree.html
+++ b/wtfamily/templates/familytree.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block head %}
-  <script type="text/javascript" src="{{ url_for('static', filename='js/autoshape.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/familytree.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/lib/autoshape.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/lib/familytree.js') }}"></script>
   <style type="text/css">
     .familytree-node {
       font-size: 7pt;
