--- a/wtfamily/static/js/components/people/people.mustache
+++ b/wtfamily/static/js/components/people/people.mustache
@@ -63,15 +63,10 @@
             {{#names}}
               <dd>{{.}}</dd>
             {{/names}}
-            {{#if attributes}}
-              <dt>Attributes</dt>
-              <dd>{{attributes.toSource}}</dd>
-              <!--
-              {{#attributes}}
-                <dd>{{.}}</dd>
-              {{/attributes}}
-              -->
-            {{/if}}
+            {{#attributes}}
+              <dt>{{type}}</dt>
+              <dd>{{value}}</dd>
+            {{/attributes}}
           </dl>
 
           <h3>Events</h3>
